kubernetes/utilities/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: utilities
---
apiVersion: v1
kind: Namespace
metadata:
  name: utilities-priv
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
