kubernetes/utilities/adguardhome-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-sync-deployment
  namespace: utilities
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll            
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome-sync
  template:
    metadata:
      labels:
        app: adguardhome-sync
    spec:
      containers:
      - name: adguardhome-sync
        image: ghcr.io/bakito/adguardhome-sync:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
          seccompProfile:
            type: RuntimeDefault
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        imagePullPolicy: IfNotPresent
