kubernetes/utilities/keel.yaml
# This custom cluster role binding is required for Keel to work properly - otherwise several apps (including keel itself) cannot be autoupdate
# You need to remove the existing clusterrolebinding that the keel helm chart creates and apply this one instead
# kubectl delete clusterrolebinding keel
---
# Allowing traefik to route to keel
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keel
  namespace: utilities
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keel.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: keel
          port: 9300
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-tailscale
  namespace: utilities
spec:
  defaultBackend:
    service:
      name: keel
      port:
        number: 9300
  ingressClassName: tailscale
  tls:
    - hosts:
        - keel
