kubernetes/utilities/webtop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop
  namespace: utilities
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll            
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtop
  template:
    metadata:
      labels:
        app: webtop
    spec:
      serviceAccountName: webtop
      containers:
      - name: webtop
        image: lscr.io/linuxserver/webtop:latest
        resources:
          limits:
            memory: "2Gi"
            cpu: "2000m"
          requests:
            memory: "1.5Gi"
            cpu: "1500m"    
        # Cannot add this securityContext because webtop needs additional permissions for chowning files
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   capabilities:
        #     drop:
        #       - "ALL"
        #   seccompProfile:
        #     type: RuntimeDefault
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: utilities
spec:
  selector:
    app: webtop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webtop-traefik
  namespace: utilities
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webtop.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: webtop
          port: 3000
          scheme: http
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop-tailscale
  namespace: utilities
spec:
  defaultBackend:
    service:
      name: webtop
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - webtop
